--- a/config_example.json
+++ b/config_example.json
@@ -12,5 +12,9 @@
     "google_oauth": {
         "client_id" : "GOOGLE_CLIENT_ID",
         "client_secret" : "GOOGLE_CLIENT_SECRET"
+    },
+    "admin": {
+      "email" : "arocha@stevens.edu",
+      "name" : "Austin Rocha"
     }
 }
